<resources>
    <string name="app_name">MovieAndNews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">""</string>

    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="see_all">See All</string>
    <string name="search">"" Search</string>
    <string name="cancel">Cancel</string>
    <string name="discover">Discover</string>
    <string name="div_10">" " / 10</string>
    <string name="revenue">Revenue: ""</string>
    <string name="language">Language: ""</string>
    <string name="view_all">View all</string>
    <string name="collapse">Collapse</string>
    <string name="h">h</string>
    <string name="m">m</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="password">password</string>


    <string name="english">English</string>
    <string name="hindi">Hindi</string>

    <string name="empty_username">Empty username</string>
    <string name="username_short">Username is too short</string>
    <string name="empty_password">Empty password</string>
    <string name="password_short">Password from 8 to 16 character</string>

    <string name="please_try_again">There was an error please try again later</string>
    <string name="wrong_username_password">Wrong username or password</string>
    <string name="login_success">login success</string>

    //Facebook
    <string name="facebook_app_id">279397549950032</string> <string name="fb_login_protocol_scheme">fb279397549950032</string>


    //
    <string name="next">Next</string>
    <string name="shop">Shop</string>
    <string name="offers">Offers</string>
    <string name="rewards">Rewards</string>
    <string name="discover_text">Look for things around you</string>
    <string name="shop_text"><![CDATA[Get the best deals & Coupons]]></string>
    <string name="offers_text">Find great offers while you discover</string>
    <string name="rewards_text"><![CDATA[Free recharge coupons & more]]></string>
    <string name="get_started">Get Started</string>
    <string name="continues">continues</string>
    <string name="skip">skip</string>

</resources>
