<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_search"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_12"
                android:background="@color/back_ground_home"
                android:drawableLeft="@drawable/icon_search_edt"
                android:ems="10"
                android:paddingEnd="@dimen/margin_40"
                android:hint="@string/search"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/margin_6"
                android:textColor="@color/color_text_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvCancel"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/left" />

            <TextView
                android:id="@+id/tvCancel"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:text="@string/cancel"
                android:textColor="@color/color_text_see_all"
                app:layout_constraintBottom_toBottomOf="@+id/edtSearch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edtSearch" />

            <ImageView
                android:id="@+id/imgSearchMovie"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/edtSearch"
                app:layout_constraintEnd_toEndOf="@+id/edtSearch"
                app:layout_constraintTop_toTopOf="@+id/edtSearch"
                app:srcCompat="@drawable/icon_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="visible"
            android:id="@+id/layout_discover"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="@string/discover"
                android:textSize="@dimen/size_17"
                android:textColor="@color/color_text_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitleToolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvTitleToolbar"
                app:srcCompat="@drawable/icon_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>
